--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-form",
+  "name": "myform",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://lowerrider.github.io/test-form",
