--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "myform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://lowerrider.github.io/test-form",
+  "homepage": "https://lowerrider.github.io/myform",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
