--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "cross-env SERVE=true webpack serve",
+    "build": "webpack",
+    "build-prod": "webpack --mode=production",
+    "clean": "rd /s /q dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,7 +47,11 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
     "@babel/standalone": "^7.22.5",
-    "gh-pages": "^5.0.0"
+    "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
+    "cross-env": "^7.0.3",
+    "gh-pages": "^5.0.0",
+    "react-refresh": "^0.14.0"
   }
 }
