--- a/package.json
+++ b/package.json
@@ -15,16 +15,13 @@
     "react-hook-form": "^7.44.3",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
-    "sass": "^1.63.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "cross-env SERVE=true webpack serve",
-    "build": "webpack",
-    "build-prod": "webpack --mode=production",
-    "clean": "rd /s /q dist",
+    "start": "webpack serve --mode development",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -47,11 +44,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@babel/preset-react": "^7.22.5",
     "@babel/standalone": "^7.22.5",
     "@pmmmwh/react-refresh-webpack-plugin": "github:pmmmwh/react-refresh-webpack-plugin",
+    "babel-loader": "^9.1.2",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.8.1",
+    "file-loader": "^6.2.0",
     "gh-pages": "^5.0.0",
-    "react-refresh": "^0.14.0"
+    "html-webpack-plugin": "^5.5.3",
+    "react-refresh": "^0.14.0",
+    "sass": "^1.63.4",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "svg-loader": "^0.0.2",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
